<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:padding="@dimen/default_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message"
            android:inputType="textCapSentences|textMultiLine"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_location"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/share_current_location" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="@android:color/white"
        tools:hint="Submit" />
</LinearLayout>
