<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".events.views.PreEventFormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/familiar_with_company"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_familiarity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <RadioGroup
                            android:id="@+id/rg_familiarity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_margin_small"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rb_familiarity_yes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/rb_familiarity_somewhat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/to_some_extent" />

                            <RadioButton
                                android:id="@+id/rb_familiarity_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no" />
                        </RadioGroup>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_interested_working"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <RadioGroup
                            android:id="@+id/rg_interest_in_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/default_margin_small"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_interest_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="1"
                                tools:ignore="HardcodedText" />

                            <RadioButton
                                android:id="@+id/rb_interest_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="2"
                                tools:ignore="HardcodedText" />

                            <RadioButton
                                android:id="@+id/rb_interest_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="3"
                                tools:ignore="HardcodedText" />

                            <RadioButton
                                android:id="@+id/rb_interest_4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="4"
                                tools:ignore="HardcodedText" />

                            <RadioButton
                                android:id="@+id/rb_interest_5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="5"
                                tools:ignore="HardcodedText" />
                        </RadioGroup>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/motivate_interest_in_company"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_motivate_interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/et_motivate_interest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/your_answer"
                            android:inputType="textCapSentences|textMultiLine"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/describe_view_of_company"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_describe_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/et_describe_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/your_answer"
                            android:inputType="textCapSentences|textMultiLine"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
